# rund

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: rund.hpp  style.hpp
src/: main.cc  rund.cc  sizes.cc  style.cc
